fix(ajax cart): adjust title font size on mobile

--- a/src/_styles/modules/ajax-cart.scss
+++ b/src/_styles/modules/ajax-cart.scss
@@ -78,7 +78,7 @@ body.ajax-cart-open {
     margin-bottom: 0;
     font-size: 20px;
     @include media-breakpoint-down('md') {
-      font-size: 10px;
+      font-size: 13px;
     }
   }
 }
